docker: use an argument for selecting the release
This allows us to use one Dockerfile for multiple releases (stable,
testing, unstable, etc.).

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,8 @@
 # Dockerfile for SIMDe development
 
-FROM debian:testing-slim
+ARG release=testing
+
+FROM debian:${release}-slim
 
 ARG DEBIAN_FRONTEND=noninteractive
 
