docker: add gdb and valgrind to installed packages
I don't use valgrind very often (ever since ASan was created), but I'm
shocked I hadn't needed gdb before now.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,6 +28,7 @@ RUN \
     meson cmake \
     '^clang-[0-9\.]+$' \
     '^g(cc|\+\+)-[0-9\.]+$' \
+    gdb valgrind \
     qemu binfmt-support qemu-user-static \
     creduce screen htop parallel nano rsync strace \
     npm libsleef-dev
