--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,9 @@ name: CI
 on:
   push:
     branches-ignore:
-      - master
-  pull_request:
+      - 'master'
+      - 'ci/**'
+      - '!ci/gha**'
 
 jobs:
   formatting:
