meson: link to libm if available
This isn't necessary with more recent versions of GCC and clang
since we use the builtin versions instead, but for very old compilers
(like GCC < 4.4) we may need it.

--- a/test/meson.build
+++ b/test/meson.build
@@ -62,6 +62,8 @@ if not c_openmp_simd
   simde_deps += dependency('openmp', required: false)
 endif
 
+simde_deps += cc.find_library('m', required: false)
+
 simde_include_dir = include_directories('..')
 
 subdir('common')
