GitHub Actions CI: run on pull requests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - 'master'
       - 'ci/**'
       - '!ci/gha**'
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
   formatting:
