--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -286,16 +286,43 @@ jobs:
       with:
         file: ./build/meson-logs/coverage.xml
 
-  xenial-gcc:
-    runs-on: ubuntu-16.04
+  gcc:
     strategy:
       matrix:
-        version: ["4.7", "4.8", "4.9", "5"]
+        include:
+        - version: 4.7
+          distro: ubuntu-16.04
+          arch_flags: -mavx2
+        - version: 4.8
+          distro: ubuntu-16.04
+          arch_flags: -mavx2
+        - version: 4.9
+          distro: ubuntu-16.04
+          arch_flags: -mavx2
+        - version: 5
+          distro: ubuntu-16.04
+          arch_flags: -mavx2
+        - version: 6
+          distro: ubuntu-18.04
+          arch_flags: -march=native
+        - version: 7
+          distro: ubuntu-18.04
+          arch_flags: -march=native
+        - version: 8
+          distro: ubuntu-18.04
+          arch_flags: -march=native
+        - version: 9
+          distro: ubuntu-20.04
+          arch_flags: -march=native
+        - version: 10
+          distro: ubuntu-20.04
+          arch_flags: -march=native
+    runs-on: ${{ matrix.distro }}
     env:
       CC: gcc-${{ matrix.version }}
       CXX: g++-${{ matrix.version }}
-      CFLAGS: -mavx2 -Wall -Wextra -Werror
-      CXXFLAGS: -mavx2 -Wall -Wextra -Werror
+      CFLAGS: ${{ matrix.arch_flags }} -Wall -Wextra -Werror
+      CXXFLAGS: ${{ matrix.arch_flags }} -Wall -Wextra -Werror
     steps:
     - uses: actions/checkout@v2
       with:
