Add WebAssembly SIMD128 implementation.
This is pretty unpolished:

 * A *lot* of accelerated implementations are missing, including many
   which are quite trivial.  Most functions have an x86 implementation,
   but none have NEON, AltiVec, etc., and even the SSE implementations
   have a lot of room for improvement.  Luckily this should be pretty
   easy to correct; we can steal fast implementations from our NEON and
   SSE implementations.
 * We're currently targeting the wasm_simd128.h from LLVM, but the spec
   has evolved since then.  I think targeting LLVM's version makes
   sense right now since we want people to be able to target real
   WebAssembly, but I'd also like to start moving this over to more
   closely match the spec.  This should be done in cooperation with the
   Emscripten / LLVM people so the APIs match, but I think we should be
   able to move more quickly than them since we don't need to wait for
   implementations in the compiler to catch up (though we may want the
   option of emitting a warning if you use a function which would end
   up emulated on WASM).
 * I made the extract functions return the type they are trying to
   extract (i.e., simde_wasm_i8x16_extract_lane returns an int8_t not
   an int).  This should probably be changed so 8/16/32-bit functions
   return an int32_t, which is what the spec says.  LLVM's header
   returns an int, but int == int32_t on WASM.
 * For functions where LLVM diverges from the spec we either follow
   the spec or don't test the divergent cases.  I think this issue will
   resolve itself as SIMDe and LLVM both move to match the spec.
 * Native aliases are currently completely untested.
 * The qfma / qfms functions are not implemented.  AFAICT they're not
   implemented in LLVM either, and they aren't in the current version
   of the spec, so I suspect this isn't a problem.

I may have missed a function here and there; LLVM's header is ordered
a bit differently so I was jumping around a lot.  If you fi

--- a/meson.build
+++ b/meson.build
@@ -290,6 +290,12 @@ if not meson.is_subproject()
     files(simde_neon_family_headers),
     subdir: 'simde/arm/neon')
 
+  install_headers(
+    files([
+      'simde/wasm/simd128.h',
+      ]),
+    subdir: 'simde/wasm')
+
   import('pkgconfig').generate(
     version : meson.project_version(),
     name : 'SIMDe',
