simd128: implement remaining functions
With this I think we have completely implemented the WASM SIMD128
API, or at least the version implemented by LLVM / Emscripten.

--- a/test/wasm/meson.build
+++ b/test/wasm/meson.build
@@ -17,6 +17,7 @@ simde_test_wasm_simd128_tests = [
   'load_splat',
   'le',
   'lt',
+  'load',
   'make',
   'max',
   'min',
@@ -34,6 +35,7 @@ simde_test_wasm_simd128_tests = [
   'shr',
   'splat',
   'sub',
+  'sub_saturate',
   'swizzle',
   'trunc_saturate',
   'widen_low',
