NEON: Implementations of CMLA and FMA.

--- a/meson.build
+++ b/meson.build
@@ -38,6 +38,7 @@ simde_neon_families = [
   'clt',
   'cltz',
   'clz',
+  'cmla',
   'cnt',
   'cvt',
   'combine',
@@ -48,6 +49,7 @@ simde_neon_families = [
   'dup_lane',
   'eor',
   'ext',
+  'fma',
   'get_high',
   'get_lane',
   'get_low',
