--- a/meson.build
+++ b/meson.build
@@ -38,6 +38,10 @@ simde_neon_families = [
   'clt',
   'cltz',
   'clz',
+  'cmla',
+  'cmla_rot90',
+  'cmla_rot180',
+  'cmla_rot270',
   'cnt',
   'cvt',
   'combine',
@@ -48,6 +52,7 @@ simde_neon_families = [
   'dup_lane',
   'eor',
   'ext',
+  'fma',
   'get_high',
   'get_lane',
   'get_low',
