NEON/CMLA: Adds includes in neon.h and meson.build

--- a/meson.build
+++ b/meson.build
@@ -39,6 +39,9 @@ simde_neon_families = [
   'cltz',
   'clz',
   'cmla',
+  'cmla_rot90',
+  'cmla_rot180',
+  'cmla_rot270',
   'cnt',
   'cvt',
   'combine',
