Fix meson + test function

--- a/meson.build
+++ b/meson.build
@@ -174,11 +174,13 @@ simde_avx512_families = [
   'cvt',
   'cvts',
   'div',
+  'expand',
   'extract',
   'fmadd',
   'fmsub',
   'fnmadd',
   'fnmsub',
+  'gather',
   'insert',
   'kshift',
   'load',
@@ -186,6 +188,7 @@ simde_avx512_families = [
   'lzcnt',
   'madd',
   'maddubs',
+  'mask',
   'max',
   'min',
   'mov',
@@ -202,6 +205,7 @@ simde_avx512_families = [
   'permutexvar',
   'permutex2var',
   'sad',
+  'scatter',
   'set',
   'set1',
   'set4',
