avx512: add several new functions
Partially fixes #739

--- a/meson.build
+++ b/meson.build
@@ -176,6 +176,7 @@ simde_avx512_families = [
   'cvt',
   'cvts',
   'div',
+  'expand',
   'extract',
   'fmadd',
   'fmsub',
@@ -227,6 +228,7 @@ simde_avx512_families = [
   'sub',
   'subs',
   'test',
+  'testn',
   'unpacklo',
   'unpackhi',
   'xor',
