Initial import of a portable SVE implementation.
This is just a starting point, nothing really useful yet.  Currently
there is basically only support for add and cmplt, but the main thing
is that this sets up all the infrastructure.  Overall, I think this is
working out pretty well, though I do see a few potential problem spots.

There are basically three implementations; native SVE, AVX-512, and
everything else.  The everything else implementation is pretty
straightforward; the biggest drawback there is likely going to be the
lack of support for predicated operations, which means that in addition
to all the bitwise AND ops (basically one for every operation) there
will also be a bit of extra pressure on the SIMD registers since one
is likely to be dedicated to the predicate.  Bitwise AND is pretty
cheap, so I think this should perform pretty well.

The AVX-512 implementations are interesting because there is a weird
inversion where AVX-512 has multiple types for the predicate
(__mmask8/16/32/64), but SVE only has a single type (svbool_t).
We store everything in an __mmask64, but *really* converting is not
trivial.  Ideally we can use pdep/pext, but that requires BMI2 and
AVX-512 doesn't imply BMI2 (though I *think* it is pretty safe to
assume).  Still, it's relatively expensive.  Luckily, I think most
compilers will be able to elide most of the conversions, at least
unless people use svbool_t in APIs where the compiler is unable to
reason about code on the other side.

Native SVE might be tricky.  Obviously, when we can just pass through
to native calls there isn't an issue, but when implementing SVE2 using
SVE I think there are going to be a lot of move instructions. Composing
SVE2 operations using SVE shouldn't be bad, but if we have to switch to
NEON or scalar and iterate through the vector we'll have to load and
store each input (including the predicate) several times for each
function.

One more thing worth mentioning is that I really don't like svptest; it
wo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
     # Make sure neon.h includes all the NEON headers.
     - name: Missing NEON includes
       run: for f in simde/arm/neon/*.h; do grep -q "include \"neon/$(basename "$f")\"" simde/arm/neon.h || (echo "Missing $f" && exit 1); done
+    # Make sure sve.h includes all the SVE headers.
+    - name: Missing SVE includes
+      run: for f in simde/arm/sve/*.h; do grep -q "include \"sve/$(basename "$f")\"" simde/arm/sve.h || (echo "Missing $f" && exit 1); done
     # Make sure we can find the expected header guards.  It's easy to miss this when doing C&P
     - name: Header guards
       run: for file in $(find simde/*/ -name '*.h'); do grep -q "$(echo "$file" | tr '[:lower:]' '[:upper:]' | tr '[:punct:]' '_')" "$file" || (echo "Missing or incorrect header guard in $file" && exit 1); done
@@ -120,6 +123,39 @@ jobs:
       run: ./test/download-sde.sh ~/sde
     - name: Configure
       run: ~/.local/bin/meson setup build -Dsleef=enabled -Db_coverage=true
+    - name: Build
+      run: ninja -C build -v
+    - name: Test
+      run: |
+        find build/test/ -type f -executable -exec parallel ~/sde/sde64 -- ::: {} \;
+    - name: Coverage Report
+      run: ninja -C build -v coverage-xml
+    - name: CodeCov.io
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./build/meson-logs/coverage.xml
+
+  sve-avx512vl:
+    runs-on: ubuntu-latest
+    env:
+      CC: clang
+      CXX: clang++
+      CFLAGS: -march=icelake-server -DSIMDE_NATURAL_VECTOR_SIZE=256 -Wall -Wextra -Werror
+      CXXFLAGS: -march=icelake-server -DSIMDE_NATURAL_VECTOR_SIZE=256 -Wall -Wextra -Werror
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: recursive
+    - name: CPU Information
+      run: cat /proc/cpuinfo
+    - name: Install APT Dependencies
+      run: sudo add-apt-repository 'ppa:ubuntu-toolchain-r/test' && sudo apt-get update && sudo apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel parallel gcovr
+    - name: Install pip Dependencies
+      run: pip3 install meson
+    - name: Download SDE
+      run: ./test/download-sde.sh ~/sde
+    - name: Configure
+      run: ~/.local/bin/meson setup build -Db_coverage=true
     - name: Build
       run: ninja -C build -v
     - name: Test
