--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -97,6 +97,9 @@ list(REMOVE_ITEM ARM_NEON_SOURCES_C "arm/neon/skel.c")
 list(REMOVE_ITEM ARM_NEON_SOURCES_C "arm/neon/skel-single.c")
 list(REMOVE_ITEM ARM_NEON_SOURCES_C "arm/neon/skel-triple.c")
 
+aux_source_directory("arm/sve" ARM_SVE_SOURCES_C)
+list(REMOVE_ITEM ARM_SVE_SOURCES_C "arm/sve/run-tests.c")
+
 aux_source_directory("x86/avx512" X86_AVX512_SOURCES_C)
 list(REMOVE_ITEM X86_AVX512_SOURCES_C "x86/avx512/run-tests.c")
 list(REMOVE_ITEM X86_AVX512_SOURCES_C "x86/avx512/skel.c")
@@ -108,14 +111,16 @@ list(REMOVE_ITEM X86_SOURCES_C "x86/run-tests.c")
 set(TEST_SOURCES_C
   ${X86_SOURCES_C}
   ${X86_AVX512_SOURCES_C}
-  ${ARM_NEON_SOURCES_C})
+  ${ARM_NEON_SOURCES_C}
+  ${ARM_SVE_SOURCES_C})
 
 set(TEST_RUNNER_SOURCES
   run-tests.c
   x86/run-tests.c
   x86/avx512/run-tests.c
   arm/run-tests.c
-  arm/neon/run-tests.c)
+  arm/neon/run-tests.c
+  arm/sve/run-tests.c)
 add_executable(run-tests ${TEST_RUNNER_SOURCES})
 set_property(TARGET run-tests PROPERTY C_STANDARD "99")
 target_add_compiler_flags(run-tests "-Wno-psabi")
