simd128: add missing WASM SIMD128 functions
This should bring SIMDe in line with the latest version of the header
from LLVM.

There is still a lot to do here.  First, many functions are missing
compiler-specific implementations (convertvector, shufflevector, vector
extensions, etc.).  Also, the WASM issue tracker has *tons* of arch-
specific versions which we can and should import.  We should also be
able to pull in more implementations (especially for POWER) from other
parts of SIMDe.  Ideally, I'd also like to import test data from
https://github.com/WebAssembly/simd/tree/master/test/core/simd since
their data has been crafted a bit more carefully and should cover all
the corner cases, but TBH I'm not sure I'll ever get around to that.

My first priority is going to be clang-specific implementations since
that's what I need in WAV.

--- a/test/wasm/meson.build
+++ b/test/wasm/meson.build
@@ -7,37 +7,54 @@ simde_test_wasm_simd128_tests = [
   'andnot',
   'any_true',
   'avgr',
+  'bitmask',
   'bitselect',
+  'ceil',
   'convert',
+  'demote',
   'div',
+  'dot',
   'eq',
   'extract_lane',
+  'extadd_pairwise',
+  'extmul_high',
+  'extmul_low',
+  'floor',
   'ge',
   'gt',
   'load_splat',
   'le',
   'lt',
   'load',
+  'load_zero',
+  'load_lane',
   'make',
   'max',
   'min',
   'mul',
   'narrow',
   'ne',
+  'nearest',
   'neg',
   'not',
   'or',
   'pmax',
   'pmin',
+  'popcnt',
+  'promote',
+  'q15mulr_sat',
   'replace_lane',
   'shl',
   'shuffle',
   'shr',
   'splat',
+  'sqrt',
+  'store_lane',
   'sub',
   'sub_sat',
   'swizzle',
   'trunc_sat',
+  'trunc',
   'extend_low',
   'extend_high',
   'xor',
