gh-actions: disable clang-3.9 build
An update to libstdc++ seems to have broken it.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -265,9 +265,9 @@ jobs:
         # - version: "3.8"
         #   distro: ubuntu-16.04
         #   arch_flags: -mavx2
-        - version: "3.9"
-          distro: ubuntu-18.04
-          arch_flags: -mavx2
+        # - version: "3.9"
+        #   distro: ubuntu-18.04
+        #   arch_flags: -mavx2
         # - version: "4.0"
         #   distro: ubuntu-18.04
         #   arch_flags: -mavx2
