--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,7 +17,7 @@ task:
     - apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcovr clang
     - pip3 install meson
   configure_script:
-    - /usr/local/bin/meson setup build -Db_coverage=true -Db_sanitize=address,undefined
+    - /usr/local/bin/meson setup build -Db_coverage=true -Db_sanitize=address,undefined -Db_lundef=false
   build_script:
     - ninja -C build -v -j 3
   test_script:
