Many work-arounds for GCC with MSA, and support in the docker image.
With this, we can actually compile on GCC when targeting MSA.  Several
tests still fail, but it appears to more or less work.

Unfortunately QEMU 5.2.0 doesn't work due to MSA support not being
included in the emulated CPU (though the feature flag is set), so the
version from Debian testing is out, and 6.0.0 seems to have some
buggy implementations resulting in incorrect values, so we have to
build from git.  This is a lot of data to download and compile, so it's
off by default; set QEMU_GIT=y when calling simde-dev.sh to enable it.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,10 @@
 # Dockerfile for SIMDe development
 
-ARG release=testing
-
-FROM debian:${release}-slim
+ARG RELEASE=testing
+FROM debian:${RELEASE}-slim
 
 ARG DEBIAN_FRONTEND=noninteractive
+ARG QEMU_GIT=n
 
 RUN \
   apt-get update -y && \
@@ -102,6 +102,18 @@ RUN \
 # Meson cross files
 RUN \
   mkdir -p "/usr/local/share/meson/cross" && ln -s /usr/local/src/simde/docker/cross-files /usr/local/share/meson/cross/simde
+
+# Install QEMU git (necessary for MIPS)
+RUN \
+  if [ ${QEMU_GIT} = "y" ]; then \
+    apt-get install -y pkg-config libglib2.0-dev libpixman-1-dev && \
+    git clone https://gitlab.com/qemu-project/qemu.git /usr/local/src/qemu && \
+    mkdir -p /usr/local/src/qemu/build && cd /usr/local/src/qemu/build && \
+    ../configure --prefix=/opt/qemu && \
+    make -j$(nproc) && \
+    make install; \
+    rm -rf /usr/local/src/qemu; \
+  fi
 
 RUN mkdir -p /opt/simde
 WORKDIR /opt/simde
