--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,9 +201,9 @@ jobs:
     strategy:
       matrix:
         include:
-        - version: 4.7
-          distro: ubuntu-16.04
-          arch_flags: -mavx2
+        # - version: 4.7
+        #   distro: ubuntu-16.04
+        #   arch_flags: -mavx2
         # - version: 4.8
         #   distro: ubuntu-16.04
         #   arch_flags: -mavx2
