--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,6 @@ jobs:
     - uses: EndBug/add-and-commit@v7
       with:
         cwd: implementation-status
-        message: "Update to ${{ env.GITHUB_SHA }}"
+        message: Update to ${{ env.GITHUB_SHA }}
         default_author: github_actions
         branch: main
