moves {range, roundscale}_round to separate files

--- a/meson.build
+++ b/meson.build
@@ -243,8 +243,10 @@ simde_avx512_families = [
   'permutexvar',
   'permutex2var',
   'range',
+  'range_round',
   'round',
   'roundscale',
+  'roundscale_round',
   'sad',
   'set',
   'set1',
