--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ jobs:
     env:
     - CC="clang"
     - CXX="clang++"
-    - CFLAGS="-mcpu=power9 -Weverything -Werror"
-    - CXXFLAGS="-mcpu=power9 -Weverything -Werror"
+    - CFLAGS="-mcpu=power9 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CXXFLAGS="-mcpu=power9 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
     addons:
       apt:
         packages: ninja-build python3-pip clang
@@ -26,8 +26,8 @@ jobs:
     env:
     - CC="clang"
     - CXX="clang++"
-    - CFLAGS="-march=z14 -mzvector -Weverything -Werror"
-    - CXXFLAGS="-march=z14 -mzvector -Weverything -Werror"
+    - CFLAGS="-march=z14 -mzvector -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CXXFLAGS="-march=z14 -mzvector -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
     addons:
       apt:
         packages: ninja-build python3-pip clang
