netlify: deploy wasm/simd128.h
This actually just changes the command to use a small script which
should automatically generate headers for simde/*/*.h so I don't
forget to do this again in the future.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,12 @@
 [build]
   publish = 'web'
-  command = 'mkdir -p web/amalgamated/x86 && (cd simde && for header in x86/*.h; do ../amalgamate.py "$header" > ../web/amalgamated/"$header"; done); mkdir -p web/amalgamated/arm && (cd simde/arm && ../../amalgamate.py neon.h > ../../web/amalgamated/arm/neon.h && ../../amalgamate.py sve.h > ../../web/amalgamated/arm/sve.h)'
+  command = '''
+    for header in simde/*/*.h; do
+      header="$(echo "$header" | cut -b7-)"
+      mkdir -p web/amalgamated/$(dirname "$header");
+      ./amalgamate.py "simde/$header" > web/amalgamated/"${header}";
+    done
+  '''
 
 [[headers]]
   for = "/amalgamated/*/*.h"
