--- a/meson.build
+++ b/meson.build
@@ -228,6 +228,7 @@ simde_avx512_families = [
   'div',
   'expand',
   'extract',
+  'flushsubnormal',
   'fmadd',
   'fmsub',
   'fnmadd',
@@ -261,6 +262,7 @@ simde_avx512_families = [
   'roundscale',
   'roundscale_round',
   'sad',
+  'scalef',
   'set',
   'set1',
   'set4',
