--- a/meson.build
+++ b/meson.build
@@ -256,12 +256,13 @@ simde_avx512_families = [
   'packus',
   'permutexvar',
   'permutex2var',
-  'range',
   'range_round',
+  'range',
+  'rolv',
   'rorv',
   'round',
-  'roundscale',
   'roundscale_round',
+  'roundscale',
   'sad',
   'scalef',
   'set',
